src/main/java/com/example/assignment/global/error/ErrorCode.java
package com.example.assignment.global.error;public class ErrorCode {
}
